feat: working with Nan and If's

--- a/curso-luis-otavio/index.html
+++ b/curso-luis-otavio/index.html
@@ -5,6 +5,13 @@
     <title>Page HTML</title>
   </head>
   <body>
+    <section>
+      <div>
+        <div id="number"></div>
+        <div id="numberDivNan"></div>
+
+      </div>
+    </section>
     <!-- <script> //Exercices
         const name = prompt("Digite seu nome?")
         const nameLength = name.length
