feat: exercises: Match

--- a/curso-luis-otavio/index.html
+++ b/curso-luis-otavio/index.html
@@ -9,6 +9,9 @@
       <div>
         <div id="number"></div>
         <div id="numberDivNan"></div>
+        <div id="numberRoundUp"></div>
+        <div id="numberRoundDown"></div>
+        <div id="numberDecimalTwo"></div>
 
       </div>
     </section>
