feat: working with root

--- a/curso-luis-otavio/index.html
+++ b/curso-luis-otavio/index.html
@@ -11,7 +11,8 @@
         <div id="numberDivNan"></div>
         <div id="numberRoundUp"></div>
         <div id="numberRoundDown"></div>
-        <div id="numberDecimalTwo"></div>
+        <div id="numberDecimalTwo"></div>        
+        <div id="numberRoot"></div>
 
       </div>
     </section>
