feat: working with isInteger

--- a/curso-luis-otavio/index.html
+++ b/curso-luis-otavio/index.html
@@ -13,6 +13,7 @@
         <div id="numberRoundDown"></div>
         <div id="numberDecimalTwo"></div>        
         <div id="numberRoot"></div>
+        <div id="numberInteger"></div>
 
       </div>
     </section>
