feat: Arrays and objects exercises

--- a/curso-luis-otavio/index.html
+++ b/curso-luis-otavio/index.html
@@ -14,7 +14,22 @@
         <div id="numberDecimalTwo"></div>        
         <div id="numberRoot"></div>
         <div id="numberInteger"></div>
+      </div>
+    </section>
+    <section>
+      <h2>Exercise</h2>
+      <h3>(Testing Code 09)</h3>
+      <div>
+        <form action="" method="get" class="form">
+          <p>Name: <input type="text" class="name"/></p>
+          <p>Subname: <input type="text" class="subname"/></p>
+          <p>Weight: <input type="text" class="weight"/></p>
+          <p>Height: <input type="text" class="height"/></p>
+          <button>Submit</button>
 
+          <div class="result"></div>
+
+        </form>
       </div>
     </section>
     <!-- <script> //Exercices
