--- a/curso-luis-otavio/index.html
+++ b/curso-luis-otavio/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Page HTML</title>
+    <link type="text/css" rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
     <section>
