--- a/curso-luis-otavio/modelo02/index.html
+++ b/curso-luis-otavio/modelo02/index.html
@@ -19,17 +19,9 @@
       <label for="heigth">Digite sua altura:</label>
       <input type="text" id="heigth">
       
-
-      <!-- <label for="input-teste-2">Label teste #2</label>
-      <input type="password" id="input-teste-2">
-
-      <label for="input-teste-3">Label teste #3</label>
-      <input type="email" id="input-teste-3"> -->
-
-      <!-- <label for="input-teste-4">Label teste #4</label>
-      <input type="number" id="input-teste-4"> -->
-
+      
       <button>Enviar</button>
+      <div id="messageResult"></div>
     </form>
   </section>
   <script src="./assets/js/main.js"></script>
