--- a/curso-luis-otavio/modelo02/index.html
+++ b/curso-luis-otavio/modelo02/index.html
@@ -25,6 +25,7 @@
     </form>
   </section>
   <script src="./assets/js/main.js"></script>
+  <script src="./assets/js/aulas.js"></script>
 </body>
 
 </html>
