feat: add switch and date exercises

--- a/curso-luis-otavio/modelo02/index.html
+++ b/curso-luis-otavio/modelo02/index.html
@@ -24,6 +24,10 @@
       <div id="messageResult"></div>
     </form>
   </section>
+  <section class="container">
+    <h2 id="titleDate">Alterar Titulo</h2>
+  </section>
+  
   <script src="./assets/js/main.js"></script>
   <script src="./assets/js/aulas.js"></script>
 </body>
