feat: for exercises

--- a/curso-luis-otavio/modelo02/index.html
+++ b/curso-luis-otavio/modelo02/index.html
@@ -27,6 +27,10 @@
   <section class="container">
     <h2 id="titleDate">Alterar Titulo</h2>
   </section>
+  <section class="container">
+    <h2 id="titleDate">Texto</h2>
+    <div class="containerExercise"></div>
+  </section>
   
   <script src="./assets/js/main.js"></script>
   <script src="./assets/js/aulas.js"></script>
